--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,5 +7,5 @@ Depends: R (>= 3.5.1)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-Imports: dplyr, readr, seplyr
+Imports: dplyr, readr, seplyr, plotrix
 RoxygenNote: 6.1.0
