--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ export(plot_convex_hull_by)
 export(plot_daily_total_points)
 export(plot_scale_curves)
 export(plot_target)
+export(plot_target_with_shots)
 export(read_archery_files)
