add daily medians

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(fnc_by_n_shots)
 export(plot_convex_hull_by)
 export(plot_daily_total_points)
 export(plot_fnc_boxplot)
+export(plot_medians_polygon)
 export(plot_scale_curves)
 export(plot_target)
 export(plot_target_with_shots)
