date module and target compare

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,10 @@
 export(ARCHERY_TARGETS)
 export(ar_add_shots)
 export(ar_make_mean_grouped_data)
+export(archeryDataServer)
+export(archeryDataUI)
+export(archeryDateModuleServer)
+export(archeryDateModuleUI)
 export(fnc_by_n_shots)
 export(plot_convex_hull_by)
 export(plot_daily_total_points)
