--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(archeryDataServer)
 export(archeryDataUI)
 export(archeryDateModuleServer)
 export(archeryDateModuleUI)
+export(archeryMiscellaneousPlotsServer)
+export(archeryMiscellaneousPlotsUI)
 export(fnc_by_n_shots)
 export(plot_convex_hull_by)
 export(plot_daily_total_points)
