--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,6 @@ Depends: R (>= 3.5.1)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-Imports: dplyr, readr, seplyr, plotrix, DepthProc, TTR, reshape2, magrittr, lubridate
+Imports: dplyr, readr, seplyr, plotrix, DepthProc, TTR, reshape2, magrittr, lubridate, openair
 Suggests: shinydashboard
 RoxygenNote: 6.1.0
